Fix suggestion layout in Internet Explorer. The previous version worked fine in all other browsers, but in IE the suggestion text was moved one line down (as if there was some invisible text before it). This change makes it display correctly in the latest versions of Opera, Firefox, Chrome and IE.
Note: The important bits are "display: inline-block" and "vertical-align: top".

git-svn-id: https://plugins.svn.wordpress.org/broken-link-checker/trunk@788115 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/links-page.css
+++ b/css/links-page.css
@@ -284,7 +284,7 @@ td.column-link-text, td.column-new-link-text {
 
 /* Inline editor: suggestion list */
 ul.blc-suggestion-list {
-    list-style: disc;
+    list-style: disc outside;
 }
 
 ul.blc-suggestion-list li {
@@ -292,28 +292,34 @@ ul.blc-suggestion-list li {
 }
 
 .blc-suggestion-details {
-    margin-right: 9em;
+    display: inline-block;
+    width: 465px;
+
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    word-wrap: normal;
+
+    vertical-align: top;
+}
+
+.blc-suggestion-list input.blc-use-url-button {
+    float: right;
+    max-width: 110px;
+    margin-top: 10px;
+}
+
+.blc-suggestion-list code.blc-suggestion-url {
     display: block;
 
     overflow: hidden;
     text-overflow: ellipsis;
+
+    white-space: nowrap;
     word-wrap: normal;
 }
 
-.blc-inline-editor input.blc-use-url-button {
-    float: right;
-    max-width: 8em;
-
-    margin-left: 1em;
-    margin-top: 8px;
-}
-
-.blc-inline-editor code.blc-suggestion-url {
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}
-
-.blc-inline-editor .blc-suggestion-name {
+.blc-suggestion-list .blc-suggestion-name {
     display: block;
 }
 
